--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ ${SOURCES}
 
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
     message(STATUS "Detected architecture: x86_64")
-    target_link_libraries(${PROJECT_NAME} raylib ${OpenCV_LIBS})
+    target_link_libraries(${PROJECT_NAME} raylib ${OpenCV_LIBS} pigpio)
 elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64")  # raspberry pi zero 2 w
     message(STATUS "Detected architecture: aarch46")
     target_link_libraries(${PROJECT_NAME} raylib ${OpenCV_LIBS} pigpio rt pthread)
