full feeder action sequence

--- a/config.conf
+++ b/config.conf
@@ -1,5 +1,16 @@
 PATH_FILES=../tests/
-POS_FEEDER=28.0000 -30.0000 -220.0000
 POS_PCB=0.0000 0.0000 0.0000
 STEPS_NUM=8
 NUMERIC_PRECISION=4
+POS_FEEDER={
+ID=1
+PUSH=32.5000 32.0000 -213.5000
+APPROACH=25.5000 25.0000 -213.5000
+PICK=28.0000 28.0000 -219.5000
+}
+POS_FEEDER={
+ID=2
+PUSH=28.0000 -30.0000 -220.0000
+APPROACH=0.0000 0.0000 0.0000
+PICK=0.0000 0.0000 0.0000
+}
