transform reference position to PCB

--- a/config.conf
+++ b/config.conf
@@ -1,5 +1,6 @@
 PATH_FILES=../tests/
-POS_PCB=0.0000 0.0000 0.0000
+POS_PCB_REF1=0.0000 0.0000 -234.5000
+POS_PCB_REF2=0.0000 31.0000 -234.5000
 STEPS_NUM=16
 NUMERIC_PRECISION=4
 POS_FEEDER={
