--- a/config.conf
+++ b/config.conf
@@ -1,17 +1,13 @@
 PATH_FILES=../tests/
-POS_PCB_REF1=-25.5000 -5.0000 -243.0000
-POS_PCB_REF2=-6.5000 -5.0000 -243.0000
+POS_PCB_REF1=-65.5000 -1.5000 -230.5000
+POS_PCB_REF2=-48.0000 -1.5000 -230.5000
+STEP_FINE=0.0002
+STEP_COARSE=0.002
 STEPS_NUM=16
 NUMERIC_PRECISION=4
 POS_FEEDER={
 ID=1
 PUSH=145.5000 83.0000 -220.0000
-APPROACH=134.0000 64.0000 -220.0000
-PICK=135.0000 70.5000 -226.0000
-}
-POS_FEEDER={
-ID=2
-PUSH=145.5000 83.0000 -220.0000
-APPROACH=134.0000 64.0000 -220.0000
-PICK=135.0000 70.5000 -226.0000
+APPROACH=0.0000 -61.0000 -220.0000
+PICK=-4.0000 -67.5000 -248.0000
 }
